Initial work on OFFREL-83.
This covers OFFREL-126, get some initial level of unit testing w/
spark enabled. Also, code quality tools like coverage and findbugs
are enabled.

RB=453509
A=xazhang